# zen-chain-habit-tracker

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  load_env.sh  pyproject.toml  test_data.sql
src/: main.py
src/app/: config.py  exceptions.py
src/app/alembic/: env.py
src/app/alembic/versions/: 0a7fe2652273_create_user_habit_progress_tables.py  0bdf41e28b93_add_timezone_for_user.py  2ae4b4dd70ee_add_cascade_for_user_fk.py  506216d90f20_timezone_required.py  50a1c1c8a04d_remove_default_goal_from_progress.py  b35d1883140e_add_unique_contraint_for_progress.py  c0a52a41a0ce_add_cascade_deletion.py  d063b92306e3_add_cascade_for_progress_fk.py  fb54ce9cd79f_add_goal_progress_field.py
src/app/db/: __init__.py  habit.py  progress.py  user.py
src/app/repositories/: __init__.py  habit.py  progress.py  user.py
src/app/schema/: habit.py  progress.py
src/app/schemas/: progress.py  user.py
src/app/services/: habit.py  progress.py  user.py
src/app/utils/: crud.py  db.py
src/core/: config.py  utils.py
src/core/db/: habit.py  user.py
src/core/models/: base.py  habit.py  user.py
src/core/schema/: habit.py  user.py
src/core/services/: create_user.py  habit.py  user.py
src/core/utils/: crud.py
src/telegram_bot/: consts.py  main.py
src/telegram_bot/handlers/: __init__.py  add_habit.py  add_new_handler.py  my_habits.py  my_progress.py  start.py  unknown_message.py
